Update doc generator to remove the render step
